--- a/dotsalary/src/main/resources/application.properties
+++ b/dotsalary/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+##### datasource #####
+spring.datasource.url=jdbc:h2:mem:salary_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+##### jpa #####
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.hibernate.ddl-auto=none
