--- a/dotsalary/src/main/resources/application.properties
+++ b/dotsalary/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+##### h2 #####
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 ##### datasource #####
 spring.datasource.url=jdbc:h2:mem:salary_db
 spring.datasource.driverClassName=org.h2.Driver
