--- a/dotsalary/src/test/resources/application-test.properties
+++ b/dotsalary/src/test/resources/application-test.properties
@@ -3,3 +3,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 ##### datasource #####
 # spring.datasource.url=jdbc:h2:mem:testDB
+spring.datasource.data=test-data.sql
